sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value i
  	while(i!=l-1){
              ^AlgGnomeSort:5: error: not found: value j
    	if(isSmaller(j+1,j)){
                     ^AlgGnomeSort:5: error: not found: value j
    	if(isSmaller(j+1,j)){
                         ^AlgGnomeSort:6: error: not found: value j
      		swap(j,j+1)
                     ^AlgGnomeSort:6: error: not found: value j
      		swap(j,j+1)
                       ^AlgGnomeSort:7: error: not found: value i
        	if(i==0){
                   ^AlgGnomeSort:8: error: not found: value i
            i=1
            ^AlgGnomeSort:11: error: not found: value i
            i=i-1
            ^AlgGnomeSort:15: error: not found: value i
        i=i+1}
        ^